crates/pcb-layout/tests/snapshots/layout_generation__dnp.layout.json.snap
---
source: crates/pcb-layout/tests/layout_generation.rs
expression: content
---
{
  "footprints": [
    {
      "dnp": false,
      "exclude_from_bom": false,
      "exclude_from_pos_files": false,
      "footprint": "kicad_libraries_kicad-footprints_Resistor_SMD@10.0.3:R_0603_1608Metric",
      "graphical_items": [
        {
          "angle": null,
          "end": null,
          "layer": "F.Fab",
          "position": {
            "x": 148500000,
            "y": 103490000
          },
          "shape": null,
          "start": null,
          "text": "${REFERENCE}",
          "type": "PCB_TEXT",
          "width": null
        },
        {
          "angle": null,
          "end": {
            "x": 148737258,
            "y": 102967500
          },
          "layer": "F.Silkscreen",
          "position": {
            "x": 148262742,
            "y": 102967500
          },
          "shape": 0,
          "start": {
            "x": 148262742,
            "y": 102967500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 120000
        },
        {
          "angle": null,
          "end": {
            "x": 148737258,
            "y": 104012500
          },
          "layer": "F.Silkscreen",
          "position": {
            "x": 148262742,
            "y": 104012500
          },
          "shape": 0,
          "start": {
            "x": 148262742,
            "y": 104012500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 120000
        },
        {
          "angle": null,
          "end": {
            "x": 149300000,
            "y": 103902500
          },
          "layer": "F.Fab",
          "position": {
            "x": 147700000,
            "y": 103077500
          },
          "shape": 1,
          "start": {
            "x": 147700000,
            "y": 103077500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 100000
        },
        {
          "angle": null,
          "end": {
            "x": 149980000,
            "y": 104220000
          },
          "layer": "F.Courtyard",
          "position": {
            "x": 147020000,
            "y": 102760000
          },
          "shape": 1,
          "start": {
            "x": 147020000,
            "y": 102760000
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 50000
        }
      ],
      "group": null,
      "layer": "F.Cu",
      "locked": false,
      "orientation": 0.0,
      "pads": [
        {
          "layer": "F.Cu",
          "name": "1",
          "position": {
            "x": 147675000,
            "y": 103490000
          }
        },
        {
          "layer": "F.Cu",
          "name": "2",
          "position": {
            "x": 149325000,
            "y": 103490000
          }
        }
      ],
      "position": {
        "x": 148500000,
        "y": 103490000
      },
      "reference": "R2",
      "uuid": "e625daf7-e501-5adf-b562-3c226ea4bcc2",
      "value": "1k"
    },
    {
      "dnp": false,
      "exclude_from_bom": false,
      "exclude_from_pos_files": false,
      "footprint": "kicad_libraries_kicad-footprints_Resistor_SMD@10.0.3:R_0603_1608Metric",
      "graphical_items": [
        {
          "angle": null,
          "end": null,
          "layer": "F.Fab",
          "position": {
            "x": 151510000,
            "y": 105000000
          },
          "shape": null,
          "start": null,
          "text": "${REFERENCE}",
          "type": "PCB_TEXT",
          "width": null
        },
        {
          "angle": null,
          "end": {
            "x": 151747258,
            "y": 104477500
          },
          "layer": "F.Silkscreen",
          "position": {
            "x": 151272742,
            "y": 104477500
          },
          "shape": 0,
          "start": {
            "x": 151272742,
            "y": 104477500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 120000
        },
        {
          "angle": null,
          "end": {
            "x": 151747258,
            "y": 105522500
          },
          "layer": "F.Silkscreen",
          "position": {
            "x": 151272742,
            "y": 105522500
          },
          "shape": 0,
          "start": {
            "x": 151272742,
            "y": 105522500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 120000
        },
        {
          "angle": null,
          "end": {
            "x": 152310000,
            "y": 105412500
          },
          "layer": "F.Fab",
          "position": {
            "x": 150710000,
            "y": 104587500
          },
          "shape": 1,
          "start": {
            "x": 150710000,
            "y": 104587500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 100000
        },
        {
          "angle": null,
          "end": {
            "x": 152990000,
            "y": 105730000
          },
          "layer": "F.Courtyard",
          "position": {
            "x": 150030000,
            "y": 104270000
          },
          "shape": 1,
          "start": {
            "x": 150030000,
            "y": 104270000
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 50000
        }
      ],
      "group": null,
      "layer": "F.Cu",
      "locked": false,
      "orientation": 0.0,
      "pads": [
        {
          "layer": "F.Cu",
          "name": "1",
          "position": {
            "x": 150685000,
            "y": 105000000
          }
        },
        {
          "layer": "F.Cu",
          "name": "2",
          "position": {
            "x": 152335000,
            "y": 105000000
          }
        }
      ],
      "position": {
        "x": 151510000,
        "y": 105000000
      },
      "reference": "R4",
      "uuid": "5a12820b-e911-547c-a781-63595d8f6a01",
      "value": "1k"
    },
    {
      "dnp": true,
      "exclude_from_bom": false,
      "exclude_from_pos_files": false,
      "footprint": "kicad_libraries_kicad-footprints_Resistor_SMD@10.0.3:R_0603_1608Metric",
      "graphical_items": [
        {
          "angle": null,
          "end": null,
          "layer": "F.Fab",
          "position": {
            "x": 148500000,
            "y": 101980000
          },
          "shape": null,
          "start": null,
          "text": "${REFERENCE}",
          "type": "PCB_TEXT",
          "width": null
        },
        {
          "angle": null,
          "end": {
            "x": 148737258,
            "y": 101457500
          },
          "layer": "F.Silkscreen",
          "position": {
            "x": 148262742,
            "y": 101457500
          },
          "shape": 0,
          "start": {
            "x": 148262742,
            "y": 101457500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 120000
        },
        {
          "angle": null,
          "end": {
            "x": 148737258,
            "y": 102502500
          },
          "layer": "F.Silkscreen",
          "position": {
            "x": 148262742,
            "y": 102502500
          },
          "shape": 0,
          "start": {
            "x": 148262742,
            "y": 102502500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 120000
        },
        {
          "angle": null,
          "end": {
            "x": 149300000,
            "y": 102392500
          },
          "layer": "F.Fab",
          "position": {
            "x": 147700000,
            "y": 101567500
          },
          "shape": 1,
          "start": {
            "x": 147700000,
            "y": 101567500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 100000
        },
        {
          "angle": null,
          "end": {
            "x": 149980000,
            "y": 102710000
          },
          "layer": "F.Courtyard",
          "position": {
            "x": 147020000,
            "y": 101250000
          },
          "shape": 1,
          "start": {
            "x": 147020000,
            "y": 101250000
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 50000
        }
      ],
      "group": null,
      "layer": "F.Cu",
      "locked": false,
      "orientation": 0.0,
      "pads": [
        {
          "layer": "F.Cu",
          "name": "1",
          "position": {
            "x": 147675000,
            "y": 101980000
          }
        },
        {
          "layer": "F.Cu",
          "name": "2",
          "position": {
            "x": 149325000,
            "y": 101980000
          }
        }
      ],
      "position": {
        "x": 148500000,
        "y": 101980000
      },
      "reference": "R3",
      "uuid": "c0624f56-bdf4-5e3f-81b2-e73a2d27a95a",
      "value": "1k"
    },
    {
      "dnp": true,
      "exclude_from_bom": false,
      "exclude_from_pos_files": false,
      "footprint": "kicad_libraries_kicad-footprints_Resistor_SMD@10.0.3:R_0603_1608Metric",
      "graphical_items": [
        {
          "angle": null,
          "end": null,
          "layer": "F.Fab",
          "position": {
            "x": 148500000,
            "y": 105000000
          },
          "shape": null,
          "start": null,
          "text": "${REFERENCE}",
          "type": "PCB_TEXT",
          "width": null
        },
        {
          "angle": null,
          "end": {
            "x": 148737258,
            "y": 104477500
          },
          "layer": "F.Silkscreen",
          "position": {
            "x": 148262742,
            "y": 104477500
          },
          "shape": 0,
          "start": {
            "x": 148262742,
            "y": 104477500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 120000
        },
        {
          "angle": null,
          "end": {
            "x": 148737258,
            "y": 105522500
          },
          "layer": "F.Silkscreen",
          "position": {
            "x": 148262742,
            "y": 105522500
          },
          "shape": 0,
          "start": {
            "x": 148262742,
            "y": 105522500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 120000
        },
        {
          "angle": null,
          "end": {
            "x": 149300000,
            "y": 105412500
          },
          "layer": "F.Fab",
          "position": {
            "x": 147700000,
            "y": 104587500
          },
          "shape": 1,
          "start": {
            "x": 147700000,
            "y": 104587500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 100000
        },
        {
          "angle": null,
          "end": {
            "x": 149980000,
            "y": 105730000
          },
          "layer": "F.Courtyard",
          "position": {
            "x": 147020000,
            "y": 104270000
          },
          "shape": 1,
          "start": {
            "x": 147020000,
            "y": 104270000
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 50000
        }
      ],
      "group": null,
      "layer": "F.Cu",
      "locked": false,
      "orientation": 0.0,
      "pads": [
        {
          "layer": "F.Cu",
          "name": "1",
          "position": {
            "x": 147675000,
            "y": 105000000
          }
        },
        {
          "layer": "F.Cu",
          "name": "2",
          "position": {
            "x": 149325000,
            "y": 105000000
          }
        }
      ],
      "position": {
        "x": 148500000,
        "y": 105000000
      },
      "reference": "R1",
      "uuid": "5df29bf2-5e5c-5d48-b4cf-d728443c1fa0",
      "value": "1k"
    }
  ],
  "groups": [],
  "tracks": [],
  "vias": [],
  "zones": []
}
