crates/pcb-layout/tests/snapshots/layout_generation__graphics.layout.json.snap
---
source: crates/pcb-layout/tests/layout_generation.rs
expression: content
---
{
  "footprints": [
    {
      "dnp": false,
      "exclude_from_bom": false,
      "exclude_from_pos_files": false,
      "footprint": "kicad_libraries_kicad-footprints_Resistor_SMD@10.0.3:R_0603_1608Metric",
      "graphical_items": [
        {
          "angle": null,
          "end": null,
          "layer": "F.Fab",
          "position": {
            "x": 148500000,
            "y": 101490000
          },
          "shape": null,
          "start": null,
          "text": "${REFERENCE}",
          "type": "PCB_TEXT",
          "width": null
        },
        {
          "angle": null,
          "end": {
            "x": 148737258,
            "y": 100967500
          },
          "layer": "F.Silkscreen",
          "position": {
            "x": 148262742,
            "y": 100967500
          },
          "shape": 0,
          "start": {
            "x": 148262742,
            "y": 100967500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 120000
        },
        {
          "angle": null,
          "end": {
            "x": 148737258,
            "y": 102012500
          },
          "layer": "F.Silkscreen",
          "position": {
            "x": 148262742,
            "y": 102012500
          },
          "shape": 0,
          "start": {
            "x": 148262742,
            "y": 102012500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 120000
        },
        {
          "angle": null,
          "end": {
            "x": 149300000,
            "y": 101902500
          },
          "layer": "F.Fab",
          "position": {
            "x": 147700000,
            "y": 101077500
          },
          "shape": 1,
          "start": {
            "x": 147700000,
            "y": 101077500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 100000
        },
        {
          "angle": null,
          "end": {
            "x": 149980000,
            "y": 102220000
          },
          "layer": "F.Courtyard",
          "position": {
            "x": 147020000,
            "y": 100760000
          },
          "shape": 1,
          "start": {
            "x": 147020000,
            "y": 100760000
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 50000
        }
      ],
      "group": "G2",
      "layer": "F.Cu",
      "locked": false,
      "orientation": 0.0,
      "pads": [
        {
          "layer": "F.Cu",
          "name": "1",
          "position": {
            "x": 147675000,
            "y": 101490000
          }
        },
        {
          "layer": "F.Cu",
          "name": "2",
          "position": {
            "x": 149325000,
            "y": 101490000
          }
        }
      ],
      "position": {
        "x": 148500000,
        "y": 101490000
      },
      "reference": "R2",
      "uuid": "2ba08c22-a09d-5491-8742-588578b67c57",
      "value": "1k"
    },
    {
      "dnp": false,
      "exclude_from_bom": false,
      "exclude_from_pos_files": false,
      "footprint": "kicad_libraries_kicad-footprints_Resistor_SMD@10.0.3:R_0603_1608Metric",
      "graphical_items": [
        {
          "angle": null,
          "end": null,
          "layer": "F.Fab",
          "position": {
            "x": 148500000,
            "y": 105000000
          },
          "shape": null,
          "start": null,
          "text": "${REFERENCE}",
          "type": "PCB_TEXT",
          "width": null
        },
        {
          "angle": null,
          "end": {
            "x": 148737258,
            "y": 104477500
          },
          "layer": "F.Silkscreen",
          "position": {
            "x": 148262742,
            "y": 104477500
          },
          "shape": 0,
          "start": {
            "x": 148262742,
            "y": 104477500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 120000
        },
        {
          "angle": null,
          "end": {
            "x": 148737258,
            "y": 105522500
          },
          "layer": "F.Silkscreen",
          "position": {
            "x": 148262742,
            "y": 105522500
          },
          "shape": 0,
          "start": {
            "x": 148262742,
            "y": 105522500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 120000
        },
        {
          "angle": null,
          "end": {
            "x": 149300000,
            "y": 105412500
          },
          "layer": "F.Fab",
          "position": {
            "x": 147700000,
            "y": 104587500
          },
          "shape": 1,
          "start": {
            "x": 147700000,
            "y": 104587500
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 100000
        },
        {
          "angle": null,
          "end": {
            "x": 149980000,
            "y": 105730000
          },
          "layer": "F.Courtyard",
          "position": {
            "x": 147020000,
            "y": 104270000
          },
          "shape": 1,
          "start": {
            "x": 147020000,
            "y": 104270000
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 50000
        }
      ],
      "group": "G1",
      "layer": "F.Cu",
      "locked": false,
      "orientation": 0.0,
      "pads": [
        {
          "layer": "F.Cu",
          "name": "1",
          "position": {
            "x": 147675000,
            "y": 105000000
          }
        },
        {
          "layer": "F.Cu",
          "name": "2",
          "position": {
            "x": 149325000,
            "y": 105000000
          }
        }
      ],
      "position": {
        "x": 148500000,
        "y": 105000000
      },
      "reference": "R1",
      "uuid": "4fc690f2-23e4-5e16-abe2-8d5d3563b7e6",
      "value": "1k"
    }
  ],
  "groups": [
    {
      "bounding_box": {
        "bottom": 103040000,
        "left": 146450000,
        "right": 150550000,
        "top": 98961750
      },
      "drawings": [
        {
          "angle": null,
          "end": {
            "x": 146750000,
            "y": 102740000
          },
          "layer": "B.Silkscreen",
          "position": {
            "x": 150250000,
            "y": 102740000
          },
          "shape": 0,
          "start": {
            "x": 150250000,
            "y": 102740000
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 100000
        },
        {
          "angle": null,
          "end": {
            "x": 150250000,
            "y": 100240000
          },
          "layer": "F.Silkscreen",
          "position": {
            "x": 146750000,
            "y": 100240000
          },
          "shape": 0,
          "start": {
            "x": 146750000,
            "y": 100240000
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 100000
        }
      ],
      "footprints": [
        "2ba08c22-a09d-5491-8742-588578b67c57"
      ],
      "locked": false,
      "name": "G2"
    },
    {
      "bounding_box": {
        "bottom": 106550000,
        "left": 146450000,
        "right": 150550000,
        "top": 102471750
      },
      "drawings": [
        {
          "angle": null,
          "end": {
            "x": 146750000,
            "y": 106250000
          },
          "layer": "B.Silkscreen",
          "position": {
            "x": 150250000,
            "y": 106250000
          },
          "shape": 0,
          "start": {
            "x": 150250000,
            "y": 106250000
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 100000
        },
        {
          "angle": null,
          "end": {
            "x": 150250000,
            "y": 103750000
          },
          "layer": "F.Silkscreen",
          "position": {
            "x": 146750000,
            "y": 103750000
          },
          "shape": 0,
          "start": {
            "x": 146750000,
            "y": 103750000
          },
          "text": null,
          "type": "PCB_SHAPE",
          "width": 100000
        }
      ],
      "footprints": [
        "4fc690f2-23e4-5e16-abe2-8d5d3563b7e6"
      ],
      "locked": false,
      "name": "G1"
    }
  ],
  "tracks": [],
  "vias": [],
  "zones": []
}
